# minizen-template

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  flake.nix  justfile  main.py  prek.toml  pyproject.toml  zensical.toml
.github/: renovate.json
.github/workflows/: bumpversion.yml  docs.yml  publish.yml  release.yml  test.yml  zizmor.yml
docs/: README.md  TODO.md
src/minizen_template/: __init__.py  main.py
tests/: test_hello.py
