[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "minizen-template"
version = "0.3.0"
description = "A template repo for python projects"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
  { name = "Hieu Dao", email = "106801182+HieuDao-code@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "miniflux>=1.1.6,<2.0.0",
  "pydantic-ai-slim[anthropic]>=1.84.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/hieudao-code/minizen-template"
Documentation = "https://hieudao-code.github.io/minizen-template/"
Repository = "https://github.com/hieudao-code/minizen-template"
Issues = "https://github.com/hieudao-code/minizen-template/issues"
Changelog = "https://github.com/hieudao-code/minizen-template/releases"


[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "miscellaneous" },
  { include-group = "release" },
  { include-group = "security" },
  { include-group = "test" },
  { include-group = "typing" },
]
docs = ["zensical==0.0.32"]
lint = ["ruff==0.15.10"]
miscellaneous = ["prek==0.3.9"]
release = ["commitizen==4.13.10"]
security = ["zizmor==1.24.1"]
test = ["pytest==9.0.3", "pytest-cov==7.1.0", "pytest-mock==3.15.1"]
typing = ["ty==0.0.29"]

[tool.uv]
exclude-newer = "1 week"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
version_files = ["src/minizen-template/__init__.py"]
breaking_change_exclamation_in_title = true
major_version_zero = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "C90",   # mccabe complexity
  "E",     # pycodestyle error
  "F",     # pyflakes
  "FAST",  # fastapi
  "I",     # isort
  "N",     # pep8-naming
  "PERF",  # Perflint
  "PIE",   # flake8-pie
  "PLR",   # pylint refactor
  "PT",    # flake8-pytest-style
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
ignore = [
  "B904", # raise-without-from-inside-except
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "S101", # assert
]

[tool.ruff.lint.isort]
known-first-party = ["minizen_template"]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.tox]
env_list = ["py314", "commit-msg", "lint", "security", "typing"]

[tool.tox.env_run_base]
description = "Run tests"
dependency_groups = ["dev"]
commands = [
  [
    "pytest",
    "--cov=minizen_template",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
  ],
]

[tool.tox.env.commit-msg]
description = "Run commitizen checks"
skip_install = true
dependency_groups = ["release"]
commands = [["cz", "check", "--rev-range", "origin/main..HEAD"]]

[tool.tox.env.lint]
description = "Run linters"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check"], ["ruff", "format", "--check"]]

[tool.tox.env.security]
description = "Run security checks"
skip_install = true
dependency_groups = ["security"]
commands = [["uv", "audit"], ["zizmor", '.', "--persona", "auditor"]]

[tool.tox.env.typing]
description = "Run type checks"
dependency_groups = ["test", "typing"]
commands = [["ty", "check"]]
